=head1 Krang Changelog

This document contains a list of changes for each release of Krang.



=head2 3.01 - KRANG_TEG BRANCH

=over

=item *

Implemented requested "Steal Story" feature, allowing a user with force-checkin
permission to grab/edit stories checked out to others in one step. [Noam Weinstein]

=item *

Enhanced all duplicate-URL checking methods to prevent new stories
with slugs from conflicting with existing category URLs, and new
categories from conflicting with existing stories. [Noam Weinstein]

=item *

Implemented 'Replace Category' button in Edit Story CGI
to simplify process of moving stories. [Noam Weinstein]

=item *

Made slugs optional (but not required) for all story types,
added slug_use() method to TopLevel allowing class-based
defaults/requirements, and enhanced New Story and Edit
Story CGI to show slug fields as appropriate. [Noam Weinstein]

=item *

Added title/slug mapping for high CP1252 and latin-1 chars to
Krang.Slug.title_to_slug(). [Bodo Schulze]

=item *

Fixed bug in ListGroup.pm where re-editing from GUI lost all 
but first value selected when multiple => 1. [Noam Weinstein]

=item *

Implemented first version of auto-slug-generation based on title
and story type. [Noam Weinstein]

=item *

Made 'New Story' & 'Add Category' dialogues remember the last 
category chosen during current session. [Noam Weinstein] 

=item *

Made 'Save' buttons in element editor truly save to disk even
when editing a container, and replaced old non-disk save with 
a 'Done' button. [Noam Weinstein]

=back

=head2 3.00 - IN DEVELOPMENT

=over

=item *

Fixed addon v2 compat bugs in some test files. [Bodo Schulze]

=item *

Get C<bin/krang_install> ready for use with MySQL 5.* [Bodo Schulze]

=item * 

Added C<--all-instances> flag to F<bin/krang_publish> to work with 
C<--everything>. [Michael Peters]

=item *

Fix ordering of media types on media UI to be in alphabetical
order. [Eric Folley]

=item *
