@@ -24,6 +24,12 @@ no_categories_for_chooser "No Sites are defined.  You must add a Site before you
 
   story_delete "Deleted Story $story_id (URL: $url)."
 
+  story_checked_in_during_edit "Someone with admin privileges checked in Story ID $id while you were editing it!"
+
+  story_stolen_during_edit "$thief used admin privileges to steal Story ID $id while you were editing it!"
+
+  story_deleted_during_edit "Story ID $id was deleted by another user while you were editing it! It no longer exists in the CMS."
+
   duplicate_category "Cannot add category because the chosen category is already associated with the story."
 
   added_category "Added story to category $url."
